todoyu core changelog

core 2.1.3 - not released yet
	* Changed: Don't require system locale data to set a locale for translation

core 2.1.2 - 2011-09-15
	* Bugfix: Tab layout for chrome fixed
	* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrome (ex: view/edit event)
	* Bugfix: fixed various button icons positions for Chrome
	* Bugfix: #123 Text form fields are ignoring defined default values
	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
	* Bugfix: Problems with close handling for popups in IE8. Redesigned callback structure
	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
	* Bugfix: Option class name was not used (invalid variable name in template)
	* Bugfix: Remove event handler attributes from tags in RTE HTML to prevent RSS attacks
	* Bugfix: Select AC value with return key doesn't clear the hidden value field (previously selected items had got lost)
	* Changed: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before
	* Changed: Made TodoyuLabelManager::$cache private
	* Changed: Made TodoyuLabelManger::getFallbackLocales private
	* Changed: Comment out unused database relation input field (relations have their own sub fields)
	* Changed: Cleanup adding the language file for jscalendar
	* Changed: Set default dummy timezone to prevent problems with date() before setting the users timezone
	* Changed: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
	* Changed: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
	* Changed: Load the override config before init (CaptainFLAM)
	* Changed: Always return the label (or the key) for a label (never empty)