@@ -1,0 +1,56 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="date">Data</label>
+	<label index="title.date_update">Data Modyfikacji</label>
+	<label index="title.date_create">Data Utworzenia</label>
+	<label index="time">Czas</label>
+	<label index="hrs">h</label>
+	<label index="month.january">Styczeń</label>
+	<label index="month.february">Luty</label>
+	<label index="month.march">Marzec</label>
+	<label index="month.april">Kwiecień</label>
+	<label index="month.may">Maj</label>
+	<label index="month.june">Czerwiec</label>
+	<label index="month.july">Lipiec</label>
+	<label index="month.august">Sierpień</label>
+	<label index="month.september">Wrzesień</label>
+	<label index="month.october">Październik</label>
+	<label index="month.november">Listopad</label>
+	<label index="month.december">Grudzień</label>
+	<label index="weekday.monday">Poniedziałek</label>
+	<label index="weekday.tuesday">Wtorek</label>
+	<label index="weekday.wednesday">Środa</label>
+	<label index="weekday.thursday">Czwartek</label>
+	<label index="weekday.friday">Piątek</label>
+	<label index="weekday.saturday">Sobota</label>
+	<label index="weekday.sunday">Niedziela</label>
+	<label index="weekday.mon">Pon</label>
+	<label index="weekday.tue">Wt</label>
+	<label index="weekday.wed">Śr</label>
+	<label index="weekday.thu">Czw</label>
+	<label index="weekday.fri">Pt</label>
+	<label index="weekday.sat">Sob</label>
+	<label index="weekday.sun">Ndz</label>
+	<label index="time.second">Sekunda</label>
+	<label index="time.seconds">Sekund</label>
+	<label index="time.minute">Minuta</label>
+	<label index="time.minutes">Minut</label>
+	<label index="time.hour">Godzina</label>
+	<label index="time.hours">Godzin</label>
+	<label index="day">Dzień</label>
+	<label index="days">Dni</label>
+	<label index="week">Tydzień</label>
+	<label index="weeks">Tygodni</label>
+	<label index="month">Miesiąc</label>
+	<label index="months">Miesięcy</label>
+	<label index="year">Rok</label>
+	<label index="years">Lat</label>
+	<label index="weeknumber">Tydzień Kalendarzowy</label>
+	<label index="weeknumberAbbr">Tydzień</label>
+	<label index="daily">Dziennie</label>
+	<label index="weekly">Tygodniowo</label>
+	<label index="monthly">Miesięcznie</label>
+	<label index="yearly">Rocznie</label>
+	<label index="today">Dzisiaj</label>
+	<label index="warning.dateformat.invalid">Wykryto niewłaściwą datę (zostanie zmieniona podczas zapisywania).</label>
+</labels>
