@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="select.pleaseSelect">Proszę wybrać</label>
+	<label index="field.isrequired">To pole jest wymagane</label>
+	<label index="field.hasError">Wprowadzona wartość jest niepoprawna</label>
+	<label index="field.save">Zapisz</label>
+	<label index="field.cancel">Skasuj</label>
+	<label index="records.add">Dodaj Rekord</label>
+	<label index="records.remove">Usuń Rekord</label>
+	<label index="records.edit">Edytuj Rekord</label>
+	<label index="records.removeconfirm">Czy na pewno chcesz usunąć ten rekord ?</label>
+	<label index="databaserelation.nolabel">[Nowa Pozycja]</label>
+	<label index="databaserelation.expandAllRecords">Pokaż Szczegóły</label>
+	<label index="error.notUnique">Taka pozycja już istnieje</label>
+	<label index="ac.noResults">Automatyczne uzupełnianie: nie znaleziono</label>
+	<label index="is_preferred">Preferowany</label>
+	<label index="dateselector.open">Otwórz zakres terminów żeby wybrać datę</label>
+	<label index="autocompleteInfo">To pole jest automatycznie uzupełniane. Zacznij pisać aby uzyskać podpowiedzi.</label>
+	<label index="legend.main">Role Definition</label>
+	<label index="daterange.choose">Wybierz zakres czasu</label>
+	<label index="daterange.monthToDate">Miesiąc do Daty</label>
+	<label index="daterange.yearToDate">Rok do Daty</label>
+	<label index="daterange.quarterToDate">Kwartał do Daty</label>
+	<label index="daterange.previousMonth">Poprzedni Miesiąc</label>
+	<label index="daterange.previousQuarter">Poprzedni Kwartał</label>
+	<label index="daterange.previousYear">Poprzedni Rok</label>
+	<label index="daterange.fullTimeRange">Pełny możliwy zakres czasu</label>
+</labels>
